--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
 <body>
     <div class="heading1">
         <p>SYMPOSIUM</p>
+        <div class="underline"></div>
     </div>
     <div class="wrapper">
         <div class="heading2 heading">
-            <p>What is Symposium?</p>
         </div>
         <div class="text1 text">
-            <p>The Symposium at Amalthea provides a platform for experts, scholars. enthusiasts and prospective clients
-                with common interests to share their expertise, research and advances. It strives to bring together pro
-                spective collaborators and allow them to have a constructive ex change of ideas and perspectives. The
-                theme for Symposium this year is</p>
+            <p>Amalthea’s symposium is an opportunity for academicians, industry leaders, policy-makers
+                and technology pioneers to collaborate, discuss and debate upon some of the most pressing
+                technology issues, and in the process educate the participants about the intricacies of these
+                subjects and also inspire them to contribute to these causes themselves. The theme for this
+                year's symposium is '5G in India: What Lies Ahead'</p>
         </div>
         <div class="heading3 heading">
-            <p>Why 'Advancing Solar Power Generation'?</p>
+            <p>Why '5G in India: What Lies Ahead' ?</p>
         </div>
         <div class="text2 text">
-            <p>Solar power is a very promising renewable energy source of power generation that can lead to a more
-                sustainable solution of the energy requirements. In the next decade, India's energy profile will have
-                solar power as a crucial component. The Symposium aims to realize the im mense potential and emerging
-                opportunities in this sector by holding a fruitful discussion on the challenges,problems and possible
-                solutions</p>
+            <p>5G is going to revolutionize the digital economy and will change how we interact with the
+                world. The possibilities it is going to open up are endless. However, it is also imperative that
+                the technology is utilised in a safe manner and is actually used to empower people. The
+                symposium will aim to bring experts in this field from industry, academia and government to
+                collaborate and discuss possible solutions for these urgent challenges.</p>
         </div>
     </div>
     <div class="heading4">
@@ -40,7 +41,6 @@
 
 
     <div class="speakerWrapper">
-
         <div class="firstHalf">
             <div class="blank blank1">
                 <div class="blinkWrap1 blinkWrap">
@@ -58,10 +58,14 @@
                 </div>
             </div>
             <div class="info2 info">
-                <img src="./assets/Cmde C. D. Balaji.jpg">
-                <h1>Cmde C. D. Balaji</h1>
-                <p>Director, ADA. Ministry of Defence, Govt. of India;</p>
-                <p><span style="color: #d44f35;">Topic:</span> Technologies in Defence and internal Security</p>
+                <img src="https://drive.google.com/uc?export=view&id=1WapszeqvEXbOpQItEo_Oc3R4Zf_v8ob1">
+                <!-- <img src="./assets/download.jpg"> -->
+                <h1>Dr Tapan Misra</h1>
+                <div class="position">
+                    <p>Former director, Space Applications Centre, ISRO; </p>
+                    <p>Former director, Physical Research Laboratory, ISRO;</p>
+                </div>
+                <p><span style="color: #ae0957;">Topic:</span> Indian Space Exploration: Unleashing a new era</p>
             </div>
             <div class="blank1 blank">
                 <div class="blinkWrap1 blinkWrap">
@@ -79,10 +83,14 @@
                 </div>
             </div>
             <div class="info4 info">
-                <img src="./assets/onkar jani.jpg">
-                <h1>Dr Omkar Jani</h1>
-                <p>Director Research and Culture, Kanoda Energy Systems Pvt Ltd;</p>
-                <p><span style="color: #af1340;">Topic:</span> Future energies and the strategies of India</p>
+                <img src="https://drive.google.com/uc?export=view&id=1oupsgbovJ0SBFUqHRgqTiwoPG1BYxyV_">
+                <!-- <img src="./assets/PranavMehta_2-p1d1tk512l1ua25edb9qsr1p8v-600x400.jpg"> -->
+                <h1>Mr Pranav Mehta</h1>
+                <div class="position">
+                    <p>Chairman, National Solar Energy Federation of india;</p>
+                </div>
+                <p><span style="color: #ae0957;">Topic:</span> Advancing Solar power Generation</p>
+
             </div>
             <div class="blank blank1">
                 <div class="blinkWrap1 blinkWrap">
@@ -99,39 +107,29 @@
                     </div>
                 </div>
             </div>
-            <div class="info6 info">
-                <!-- To be changed -->
-                <img src="./assets/saraswat_0.jpg"> 
-                <h1>Shri Amitav Mallik</h1>
-                <p>Former Director, LASTEC, DRDO;</p>
-                <p><span style="color: #66b2b7;">Topic:</span> Technologies in defence and Internal Security</p>
-            </div>
-            <div class="blank blank1">
-                <div class="blinkWrap1 blinkWrap">
-                    <div class="blink7 blink">
-                        <div class="center7 center"></div>
-                    </div>
+            <div class="info7 info">
+                <!-- <img src="./assets/srinivas.jpg"> -->
+                <img src="https://drive.google.com/uc?export=view&id=1ZCZOR9KTXDSd494gljiGRUw1iJ7MDZdD">
+                <h1>Dr Srinivas Oruganti</h1>
+                <div class="position">
+                    <p>Director Dr Reddy's Institute of Life Sciences;</p>
                 </div>
-
-                <div class="linewrap1 linewrap">
-                    <div class="line7 line">
-                    </div>
-                    <div class="center7 center">
-
-                    </div>
-                </div>
+                <p><span style="color: #ae0957;">Topic:</span> Drug Discovery and Distribution: Taking a Leap</p>
             </div>
         </div>
 
 
         <div class="secondHalf">
             <div class="info1 info">
-                <img src="./assets/saraswat_0.jpg">
+                <!-- <img src="./assets/saraswat_0.jpg"> -->
+                <img src="https://drive.google.com/uc?export=view&id=1P9mhktowRq35qeV5SrceJdBIsiA6U4P1">
                 <h1>Dr V. K. Saraswat</h1>
-                <p>Member, NITI Aayog;</p>
-                <p>Former Director General, DRDO;</p>
-                <p>Chief Scientific Advisor, Ministry of Defence, Govt. of India)</p>
-                <p><span style="color: #66b2b7;">Topic:</span> Technologies in Defence and Internal Security</p>
+                <div class="position">
+                    <p>Member, NITI Aayog;</p>
+                    <p>Former Director General, DRDO;</p>
+                    <p>Chief Scientific Advisor, Ministry of Defence, Govt. of India)</p>
+                </div>
+                <p><span style="color: #ae0957;">Topic:</span> Technologies in Defence and Internal Security</p>
             </div>
             <div class="blank">
                 <div class="blinkWrap2 blinkWrap">
@@ -149,10 +147,14 @@
                 </div>
             </div>
             <div class="info3 info">
-                <img src="./assets/PranavMehta_2-p1d1tk512l1ua25edb9qsr1p8v-600x400.jpg">
-                <h1>Mr Pranav Mehta</h1>
-                <p>Chairman, National Solar Energy Federation of india;</p>
-                <p><span style="color: #ee8d00;">Topic:</span> Advancing Solar power Generation</p>
+                <!-- <img src="./assets/onkar jani.jpg"> -->
+                <img src="https://drive.google.com/uc?export=view&id=14jni1dC1qApwr3YTWQNVCpMkHLAfuS_a">
+                <h1>Dr Omkar Jani</h1>
+                <div class="position">
+                    <p>Director Research and Culture, Kanoda Energy Systems Pvt Ltd;</p>
+                </div>
+                <p><span style="color: #ae0957;">Topic:</span> Future energies and the strategies of India</p>
+
             </div>
             <div class="blank">
                 <div class="blinkWrap2 blinkWrap">
@@ -170,10 +172,13 @@
                 </div>
             </div>
             <div class="info5 info">
-                <img src="./assets/srinivas.jpg">
-                <h1>Dr Srinivas Oruganti</h1>
-                <p>Director Dr Reddy's Institute of Life Sciences;</p>
-                <p><span style="color: #007f86;">Topic:</span> Drug Discovery and Distribution: Taking a Leap</p>
+                <!-- <img src="./assets/Cmde C. D. Balaji.jpg"> -->
+                <img src="https://drive.google.com/uc?export=view&id=1mB-7SzCk85gsujAUnk6tTCiU3CKPXhZ9">
+                <h1>Cmde C. D. Balaji</h1>
+                <div class="position">
+                    <p>Director, ADA. Ministry of Defence, Govt. of India;</p>
+                </div>
+                <p><span style="color: #ae0957;">Topic:</span> Technologies in Defence and internal Security</p>
             </div>
             <div class="blank">
                 <div class="blinkWrap2 blinkWrap">
@@ -190,15 +195,9 @@
                     </div>
                 </div>
             </div>
-            <div class="info7 info">
-                <img src="./assets/download.jpg">
-                <h1>Dr Tapan Misra</h1>
-                <p>Former director, Space Applications Centre, ISRO; </p>
-                    <p>Former director, Physical Research Laboratory, ISRO;</p>
-                <p><span style="color: #59ce8f;">Topic:</span>  Indian Space Exploration: Unleashing a new era</p>
-            </div>
         </div>
     </div>
 </body>
+<script src="./index.js"></script>
 
 </html>
